<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.unix</groupId>
  <artifactId>unistd</artifactId>
  <version>1.1.0</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>dev.blanke.maven.plugins</groupId>
        <artifactId>jextract-maven-plugin</artifactId>
        <version>1.1.0</version>
        <configuration>
          <header>/usr/include/unistd.h</header>
        </configuration>
        <executions>
          <execution>
            <id>jextract</id>
            <goals>
              <goal>jextract</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>19</source>
          <target>19</target>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.jextract</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
